# tpt-helix

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  TODO 1260713.md  TODO.md  spec.txt
.github/workflows/: ci.yml
crates/appfront/: Cargo.toml
crates/appfront/src/: css.rs  egui_surface.rs  layout.rs  lib.rs  render.rs
crates/appfront/tests/: bridge.rs
crates/helix-guest-example/: Cargo.toml
crates/helix-guest-example/src/: lib.rs
crates/helix-migrate/: Cargo.toml
crates/helix-migrate/src/: coverage.rs  deploy.rs  eve.rs  js_transform.rs  lib.rs  optimize.rs  spark.rs  transpile.rs  tree_sitter_discovery.rs  type_infer.rs
crates/helix-migrate/tests/: discovery.rs  equivalence.proptest-regressions  equivalence.rs
crates/helix-runtime/: Cargo.toml
crates/helix-runtime/benches/: js_bench.rs  js_engine_compare.rs  layout_bench.rs  video_bench.rs
crates/helix-runtime/src/: capability.rs  content.rs  css.rs  dash.rs  display_list.rs  fonts.rs  gpu.rs  html.rs  js.rs  js_bridge.rs  layout.rs  lib.rs  media_decode.rs  p2p.rs  p2p_libp2p.rs  raster.rs  screenshot_diff.rs  software_raster.rs  stub.rs  text.rs  wasm.rs
crates/helix-runtime/tests/: boa_evaluation.rs  bridge_conformance.rs  capability_broker.rs  capability_fuzz.rs  conformance.rs  hello_dom.wasm  perf_regression.rs  render_pipeline.rs  video_memory.rs  wasm_lifecycle.rs  wasm_smoke.rs  wit_boundary.rs
crates/helix-wit/: Cargo.toml
crates/helix-wit/src/: lib.rs
crates/helix-wit/wit/: helix.wit
wit/: helix.wit
