[workspace]
resolver = "2"
members = [
    "crates/helix-runtime",
    "crates/helix-wit",
    "crates/helix-guest-example",
    "crates/helix-migrate",
    "crates/appfront",
]

# The guest example only builds for `wasm32-unknown-unknown` (its bindings
# reference wasm imports), so exclude it from the default host build.
# `appfront` is also excluded from the default build because its `window`
# feature (eframe + wgpu) is heavy; build it explicitly with
# `cargo build -p appfront` / `cargo run -p appfront --features window`.
default-members = [
    "crates/helix-runtime",
    "crates/helix-wit",
    "crates/helix-migrate",
]

# Release build profile used for the packaged Linux x86_64 binary and CI
# release runs. `lto = "thin"` keeps link time reasonable while still
# shrinking the final binary; `codegen-units = 1` maximizes per-crate
# optimization; `strip = true` drops debug symbols from the shipped artifact.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "unwind"
strip = true
