[package]
name = "helix-migrate"
version = "0.1.0"
edition = "2024"

# Phase 1: AI migration agent v0.1. This crate is the Stage S1 (Discovery)
# frontend of the migration pipeline (spec §6.1). It extracts a lightweight
# API-surface map (imports / exports / top-level functions) from JS/TS source so
# the orchestration layer can plan a migration before any transpilation.
#
# The reference implementation is backed by `tree-sitter` for full AST
# fidelity (see `tree_sitter_discovery`); a dependency-free tokenizer
# (`discover`) remains as a zero-cost fallback / smoke path. Both produce the
# same stable `ApiSurfaceMap` contract.

[dependencies]
tree-sitter = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"

[dev-dependencies]
proptest = "1"
