[package]
name = "helix-runtime"
version = "0.1.0"
edition = "2024"

[features]
# Enables hardware decode backends (VA-API / Vulkan Video). Off by default so
# the crate builds and tests on headless CI hosts without a GPU. See
# `media_decode.rs`.
hardware-decode = []

[dependencies]
html5ever = "0.39.0"
lightningcss = "1.0.0-alpha.71"
markup5ever_rcdom = "0.39.0"
selectors = "0.39.0"
cssparser = "0.37.0"
precomputed-hash = "0.1.1"
taffy = { version = "0.5", features = ["std"] }
cosmic-text = "0.12"
fontdb = "0.16"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
resvg = "0.44"
wgpu = "22"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
rquickjs = { version = "0.6", features = ["macro"] }
helix-wit = { path = "../helix-wit" }
wasmtime = "46"
sha2 = "0.10"

[dev-dependencies]
helix-wit = { path = "../helix-wit" }
